--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DB
+# Optional fallback if you use the Vercel Postgres integration (the build script reads this automatically)
+POSTGRES_PRISMA_URL=
 NEXTAUTH_SECRET=dev-secret-change-me
 NEXTAUTH_URL=http://localhost:3000
